fix: let the text sections align left in mobile screens

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -398,12 +398,6 @@ body > div.page > .content > div.wraper > section.box {
   overflow: hidden;
   position: relative;
 }
-
-@media (max-width: 768px) {
-  body > div.page > .content > div.wraper > section.box {
-    text-align: center;
-  }
-}
 /* End Wraper Boxs Styles */
 
 /* Start Welcome Box Styles */
